DemoMyApp/src/objects/Opportunity_Finance__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Fee__c</fullName>
        <label>Activity Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aetna_Insurance_Price__c</fullName>
        <label>Aetna Insurance Price</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aetna_Insurance__c</fullName>
        <label>Aetna Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single 6 months (visiting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_Due_Now__c</fullName>
        <formula>IF  (Opportunity__r.Confirmation_Deadline__c  &lt;=  TODAY() , Course_Deposit_Amount__c ,0) + 
IF( Payment_Due_Date_1st__c &lt;=  TODAY() ,  Payment_Amount_1st__c  ,0) +
IF( Payment_Due_Date_2nd__c &lt;=  TODAY() ,  Payment_Amount_2nd__c,0  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due Now</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Accommodation_Fee__c</fullName>
        <label>Housing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>App ID</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Application_Fee_Paid_Date__c</fullName>
        <label>Application Fee Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Paid__c</fullName>
        <label>Application Fee Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Application Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <label>Application Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bertil_Hult_Scholarship_Amount_FS__c</fullName>
        <formula>Bertil_Hult_Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bertil Hult Scholarship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bertil_Hult_Scholarship_Amount__c</fullName>
        <label>Bertil Hult Scholarship Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CC_Forms_and_Checks_Date_Last_Changed__c</fullName>
        <label>CC Forms and Checks Date Last Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Forms_and_Checks_Set_By__c</fullName>
        <label>CC Forms and Checks Set By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Adjustment_for_Change_of_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Adjustment for Change of Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_Adjustment_on_Program_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Adjustment on Program Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Deposit_Mode_of_Payment__c</fullName>
        <formula>CASE( OP_Depost_Paid_Method_Index__c ,1, &quot;CC Charged Via Salesforce&quot;, 2, &quot;CC Charged via HK&quot;, 3,&quot;Wire Transfer&quot;,4, &quot;Manual Credit Card&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmation Deposit Mode of Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Deposit_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Deposit Paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Deposit__c</fullName>
        <label>Confirmation Deposit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Deposit_Amount__c</fullName>
        <label>Course Deposit Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Deposit_Paid__c</fullName>
        <label>Course Deposit Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Confirmation Deposit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Currency_Mismatch__c</fullName>
        <description>TEXT(Opportunity__r.Program__r.CurrencyIsoCode) != TEXT(CurrencyIsoCode)</description>
        <formula>If (TEXT(Opportunity__r.Program__r.CurrencyIsoCode) != TEXT(CurrencyIsoCode), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Mismatch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Balance_Due_Portal__c</fullName>
        <formula>Tuition_Fees_Balance_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_is_from_Top_Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox is used to indicate that the data has come from Top Apply and is for the Applications that were in the Partial Status when the Salesforce System went live.  The Applications from Top Apply use the older pricing model.</description>
        <label>Data is from Top Apply?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Installment_Plan_Accepted__c</fullName>
        <label>Date Installment Plan Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Student_Fin_Info_Unlocked__c</fullName>
        <label>Date Student Fin Info Unlocked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dean_Scholarship_Amount_FS__c</fullName>
        <formula>Dean_Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dean Scholarship Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dean_Scholarship_Amount__c</fullName>
        <label>Dean Scholarship Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Due2_FS__c</fullName>
        <formula>OP_Confirmation_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Amount Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Due_FS__c</fullName>
        <label>Deposit Amount Due</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Balance__c</fullName>
        <formula>Total_Balance_Due_FS__c   -  Deposit_Paid_FS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance After Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Date_Paid__c</fullName>
        <label>Deposit Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid_FS__c</fullName>
        <formula>Course_Deposit_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid__c</fullName>
        <label>Deposit Paid</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desires_Diploma_in_MDM_or_MFIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desires Diploma in MDM or MFIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desires_Installment_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desires Installment Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desires_Rotation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desires Rotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desires_Specialization_in_MDM_or_MFIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desires Specialization in MDM or MFIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desires_UG_Analyst_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desires UG Analyst Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diploma_in_MDM_or_MFIN__c</fullName>
        <label>Diploma in MDM or MFIN</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Housing_Bursary_Amount__c</fullName>
        <label>Dubai Housing Bursary Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Housing_Fee__c</fullName>
        <label>Dubai Housing Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Visa_Cost__c</fullName>
        <label>Dubai Visa Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Visa_Type__c</fullName>
        <label>Dubai Visa Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Standard All Countries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Express 33 Countries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Express Other Countries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Single &amp; Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Single &amp; Spouse &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Single &amp; Spouse &amp; 2 Child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EF_Partner_Programs__c</fullName>
        <label>EF Partner Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IEMBA Program (6 months)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEMBA Program (3 months)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Deadline_Date__c</fullName>
        <label>Early Bird Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Scholarship_Amount_FS__c</fullName>
        <formula>Early_Bird_Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Bird Scholarship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Scholarship_Amount__c</fullName>
        <label>Early Bird Scholarship Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Erika_Insurance_Price__c</fullName>
        <label>Erika Insurance Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Erika_Insurance__c</fullName>
        <label>Erika Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single 6 months (visiting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Financing_Status__c</fullName>
        <label>External Financing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Financing_Subtotal__c</fullName>
        <formula>Go_Ed_MEFA_Replacement_Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Financing Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Financing__c</fullName>
        <label>External Financing</label>
        <picklist>
            <picklistValues>
                <fullName>MEFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADIVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal/Family Bank Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title IV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Approval_Reason__c</fullName>
        <label>Financial Aid Approval Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Student Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gmat Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tactical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Approved_Date__c</fullName>
        <label>Financial Aid Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Approver__c</fullName>
        <label>Above Limit Financial Aid Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Percent_of_Tuition_Fee__c</fullName>
        <formula>Total_Financial_Aid_FS__c  /   Tuition_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid Percent of Tuition Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Percent_of_Tuition_Fees_FS__c</fullName>
        <formula>Total_Financial_Aid_FS__c /  Tuition_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid Percent of Tuition Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GoEd_Financing_Status__c</fullName>
        <label>GoEd Financing Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete application submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Go_Ed_Loan_Amount_FS__c</fullName>
        <formula>Go_Ed_Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go Ed Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Go_Ed_Loan_Amount__c</fullName>
        <label>Go Ed Loan Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Go_Ed_Loan_Note_FS__c</fullName>
        <formula>If  (Go_Ed_Loan_Amount__c &gt;0 &amp;&amp; CONTAINS(Text(GoEd_Financing_Status__c) ,&quot;Complete application submitted&quot;), &quot;The Go Ed Financing Amount is included in the Total Financial Aid Calculation&quot;,&quot;The Go Ed Financing is not approved yet.  The Go Ed Loan Amount in not currently Included in the Total Financial Aid Calculation.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go Ed Loan Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Ed_Loan_Note__c</fullName>
        <formula>If  (Go_Ed_Loan_Amount__c &gt;0 &amp;&amp; CONTAINS(Text(GoEd_Financing_Status__c) ,&quot;Complete application submitted&quot;), &quot;The Go Ed Financing Amount is included in the Total Financial Aid Calculation&quot;,&quot;The Go Ed Financing is not approved yet.  The Go Ed Loan Amount in not currently Included in the Total Financial Aid Calculation.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go Ed Loan Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Ed_MEFA_Replacement_Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Accommodation__c</fullName>
        <label>Housing Accommodation</label>
        <picklist>
            <picklistValues>
                <fullName>Dubai Housing Bursary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai - Single Room (1 Person) - 8 Months - Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA Hotel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Housing_Fee_FS__c</fullName>
        <formula>Annual_Accommodation_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IEBA_IEMS_Program_Fee_FS__c</fullName>
        <formula>Partner_Program_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IEMBA Program Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_agree_to_Hult_Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I agree to Hult Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_agree_to_Terms_Cond_for_App_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I agree to Terms &amp; Cond for App Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installment_Plan_FS__c</fullName>
        <formula>TEXT(Installment_Plan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Plan_Fee_FS__c</fullName>
        <formula>Installment_Plan_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Plan Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installment_Plan_Fee__c</fullName>
        <label>Installment Plan Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Plan__c</fullName>
        <inlineHelpText>All students need to pay the first invoice 60 days before the program starts. Students on installment plan pay the 2nd invoice in January 2013, all others pay 2nd invoice 30 days before the program starts.</inlineHelpText>
        <label>Installment Plan</label>
        <picklist>
            <picklistValues>
                <fullName>No Installment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FlexiPlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No FlexiPlan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_FS__c</fullName>
        <formula>Insurance_Provider__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Fee_FS__c</fullName>
        <label>Insurance Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Fee__c</fullName>
        <formula>Insurance_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Price__c</fullName>
        <label>Insurance Price</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <label>Provider</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_FS__c</fullName>
        <formula>Text(Insurance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Single 6 months (visiting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; 2+ Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; 2+ Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Amount_Due__c</fullName>
        <formula>Total_Tuition_Amount__c - Deposit_Balance__c - Total_Financial_Aid_Amount__c- External_Financing_Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Balance_Due__c</fullName>
        <formula>Total_Due_Amount__c  - Total_Payments_Made__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nido_Confirmed_Date__c</fullName>
        <label>Nido Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nido_Payment_Deadline__c</fullName>
        <label>Nido Payment Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Financial_Aid_Awarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Financial Aid Awarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Financial_Aid_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Financial Aid Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OP_1st_Payment_Amount_Paid__c</fullName>
        <label>OP:1st Payment Amount Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>1st Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OP_2nd_Payment_Amount_Paid__c</fullName>
        <label>OP:2nd Payment Amount Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>2nd Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OP_Activity_Fee__c</fullName>
        <formula>Opportunity__r.Program__r.Student_Resources_Activities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Activity Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_App_Fee_Lookup__c</fullName>
        <label>OP:App Fee Lookup</label>
        <referenceTo>Application_Fee_Merchant_Services__c</referenceTo>
        <relationshipLabel>Finances</relationshipLabel>
        <relationshipName>Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OP_App_ID__c</fullName>
        <formula>Opportunity__r.App_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:App ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Application_Fee__c</fullName>
        <formula>Opportunity__r.Program__r.Application_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Application Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Campus__c</fullName>
        <formula>text(Opportunity__r.Primary_Campus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP: Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Confirmation_Deposit_Amount_Paid__c</fullName>
        <label>OP:Confirmation Deposit Amount Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Confirmation Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OP_Confirmation_Deposit__c</fullName>
        <formula>Opportunity__r.Program__r.Confirmation_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Confirmation Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Country__c</fullName>
        <formula>Opportunity__r.Country_Of_Residence__c</formula>
        <label>OP:Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Depost_Paid_Method_Index__c</fullName>
        <label>OP:Depost Paid Method Index</label>
        <summarizedField>Finance_Transactions__c.OP_Transaction_Method_Index__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Confirmation Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OP_Diploma_in_MDM_or_MFIN__c</fullName>
        <formula>Opportunity__r.Program__r.Diploma_in_MDM_or_MFIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Diploma in MDM or MFIN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>